crates/nash-report/src/type_/snapshots/nash_report__type___tests__annotation_variable_escapes.snap
---
source: crates/nash-report/src/type_/tests.rs
expression: "show(&\nError::AnnotationVariableEscapes\n{ region: region(), name: Some(\"f\"), variable: &ErrorType::RigidVar(\"a\") })"
---
  × Annotation for `f` quantifies type variable `'a`, already fixed by the enclosing scope.
   ╭─[Main.nash:1:1]
 1 │ value
   · ─────
   ╰────
  help: Use the enclosing variable without quantifying it again.
