crates/nash-report/src/type_/snapshots/nash_report__type___tests__append_int_left.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue = 1 ++ \"hello\"\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.string`, found `Primitive.int`.
   ╭─[Main.nash:2:9]
 1 │ module Main exposing (..)
 2 │ value = 1 ++ "hello"
   ·         ┬
   ·         ╰── left operand of (++)
   ╰────
