crates/nash-report/src/type_/snapshots/nash_report__type___tests__boolean_left.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue = \"hello\" && True\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.bool`, found `Primitive.string`.
   ╭─[Main.nash:2:9]
 1 │ module Main exposing (..)
 2 │ value = "hello" && True
   ·         ───┬───
   ·            ╰── left operand of (&&)
   ╰────
  help: Use an explicit comparison to produce a `bool`.
