crates/nash-report/src/type_/snapshots/nash_report__type___tests__boolean_right.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue = True || \"hello\"\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.bool`, found `Primitive.string`.
   ╭─[Main.nash:2:17]
 1 │ module Main exposing (..)
 2 │ value = True || "hello"
   ·                 ───┬───
   ·                    ╰── right operand of (||)
   ╰────
  help: Use an explicit comparison to produce a `bool`.
