crates/nash-report/src/type_/snapshots/nash_report__type___tests__contradictory_representation.snap
---
source: crates/nash-report/src/type_/tests.rs
expression: "show(&\nError::ContradictoryRepresentation\n{\n    region: region(), name: \"f\", typ: &ErrorType::RigidVar(\"a\"), requirements:\n    &[nash_ast::primitives::ReprTrait::Big,\n    nash_ast::primitives::ReprTrait::Little]\n})"
---
  × `f` requires incompatible representations for `'a`.
   ╭─[Main.nash:1:1]
 1 │ value
   · ─────
   ╰────
  help: Required: Big, Little.

        Use a consistent representation or convert the value explicitly.
